# log_analyser

./: README.md  pyproject.toml
log_analyser/: analyser.py  exceptions.py  log_entry.py  logging.py  main.py  metrics.py  validators.py  writers.py
log_analyser/io/: __init__.py  base.py
log_analyser/io/input/: base.py  csv.py
log_analyser/io/output/: base.py  json.py
log_analyser/metrics/: __init__.py  base.py  events_per_second.py  ip_frequency.py  metrics_codes.py  total_amount_of_bytes_exchanged.py
log_analyser/readers/: __init__.py  csv.py  registry.py
tests/: conftest.py  test_e2e.py  utils.py
tests/e2e_tests/: test_errors.py  test_success.py  test_validation.py
tests/io/input/: test_csv.py
tests/metrics/: test_events_per_second.py  test_total_amount_of_bytes_exchanged.py
tests/readers/: test_csv.py
tests/unit_tests/: test_analyser.py
tests/unit_tests/io/input/: test_csv.py
tests/unit_tests/io/output/: test_json.py
tests/unit_tests/metrics/: test_ip_frequency.py  test_total_amount_of_bytes_exchanged.py
