[tool.poetry]
name = "log-analyser"
version = "0.1.0"
description = "A command-line tool to analyze the content of log files"
authors = ["Kristina Podobnaia <kristina_podobnaia@epam.com>"]
readme = "README.md"
packages = [{ include = "log_analyser" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = "^0.13.1" }
pytest-asyncio = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
asyncio_default_fixture_loop_scope = "session"

[tool.poetry.scripts]
log-analyser = "log_analyser.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
